# pyxell_agent

./: .gitignore  DockerFile  README.md  main.py  render.yaml  requirements.txt  settings.json  test.ipynb  web_browser_agent.ipynb
APIs/: README.md  main.py  requirements.txt
APIs/authentication/: auth.py  schemas.py
APIs/utils/: db_utils.py
UserAuth/: README.md  main.py
UserAuth/authentication/: schemas.py
UserAuth/utils/: db_utils.py
agents/: .gitignore  README.md  agents.yaml  pyproject.toml
agents/browser_agent/: .gitignore  package-lock.json  package.json  screenshot.js  vison_scraper.py  web_agent.js  web_agent.py
server/: README.md  test.js  test1.js
server/authentication/: auth.py
server/database/: user_db.json
server/utils/: db_utils.py
ui/: package-lock.json  package.json
ui/app/: StoreProvider.tsx  globals.css  layout.tsx  page.tsx
ui/app/chat/: page.tsx
ui/app/components/: Alert.tsx  Button.tsx
ui/app/login/: page.tsx
ui/lib/: alertSlice.ts  index.ts
