[tool.poetry]
name = "pyxell-agent"
version = "0.1"
description = "Agent 2.0"
authors = ["okoliechykwuka <forbeseuroupe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
openai = "^1.30.2"
selenium = "^4.21.0"
lavague = "^1.0.23.post2"
langchainhub = "^0.1.16"
langchain-openai = "^0.1.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
